welcome.lessons.welcome.traversal.Snake.scala.code
def posFinale() = { if (estFaceMur) {

if (getDirection() == Direction.EST) {gauche(); if (estFaceMur()) {
  return true} else {avance();gauche(); return false}} else {

if (getDirection() == Direction.OUEST) {droite(); if (estFaceMur()) {return true} else {avance();droite(); return false}} } } else {return false} }

override def run() {
  

  while (posFinale() == false) {avance()}
}












